use xwiki standalone distribution version