@@ -1,31 +1,8 @@
 #!/bin/bash
 
-
-echo '=============================='
-echo 'create database '${DB_NAME} > /tmp/createdb.sql
-cat /tmp/createdb.sql
-
-mysql -h${DB_HOST} -P${DB_PORT} -u${DB_USER} -p${DB_PASS} < /tmp/createdb.sql
-
-
-ADMIN_USER=${ADMIN_USER:-admin}
-ADMIN_PASS=${ADMIN_PASS:-tomcat}
-MAX_UPLOAD_SIZE=${MAX_UPLOAD_SIZE:-52428800}
-CATALINA_OPTS=${CATALINA_OPTS:-"-Xms128m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m"}
-
-export CATALINA_OPTS="${CATALINA_OPTS}"
-
-cat << EOF > /opt/tomcat/conf/tomcat-users.xml
-<?xml version='1.0' encoding='utf-8'?>
-<tomcat-users>
-<user username="${ADMIN_USER}" password="${ADMIN_PASS}" roles="admin-gui,manager-gui"/>
-</tomcat-users>
-EOF
-
-if [ -f "/opt/tomcat/webapps/manager/WEB-INF/web.xml" ]
-then
-	sed -i "s#.*max-file-size.*#\t<max-file-size>${MAX_UPLOAD_SIZE}</max-file-size>#g" /opt/tomcat/webapps/manager/WEB-INF/web.xml
-	sed -i "s#.*max-request-size.*#\t<max-request-size>${MAX_UPLOAD_SIZE}</max-request-size>#g" /opt/tomcat/webapps/manager/WEB-INF/web.xml
+if [ ! -d "/opt/xwiki/data/META-INF" ]; then
+	cp -rf /tmp/xwiki-data/* /opt/xwiki/data/
 fi
 
-/bin/bash -e /opt/tomcat/bin/catalina.sh run
+cd /opt/xwiki
+./start_xwiki.sh
